# usv3-framework

./: .flake8  .gitattributes  .gitignore  README.md  main.py  poetry.toml  pyproject.toml
config/: admins.yml  api_keys.yml  cmd_config.yml  core_config.yml  extra_config.yml  modules.json  modules.yml
docs/: README.md
setup/: cmd_requirements.txt  core_requirements.txt
tools/: build_cython.py  register.py  tasks.py
usv3/: bot.py  entry.py  loader.py  runner.py
usv3/events/command/: afk.py  aliases.py  coin.py  dice.py  help.py  modules.py  ping.py  reload.py  scramble.py  unload.py
usv3/events/commands/: afk.py  aliases.py  coin.py  dice.py  help.py  reload.py  scramble.py
usv3/events/message/: afk_check.py  scramble_check.py
usv3/events/whisper/: afk.py  modules.py  reload.py  unload.py
